--- a/Prometheus/kepler.dash.yaml
+++ b/Prometheus/kepler.dash.yaml
@@ -2,16 +2,14 @@ properties:
   ### User properties (you can modify this)
   prom_url: http://localhost:9090
   refresh: -1
-  
-  period: 10m
-  window: 10s
+  time_window: "[15m:30s]"
 
   # parameters
   coal: 2.23
   petroleum: 2.13
   natural_gas: 0.91
   
-  namespace: ".*"
+  namespace: "system"
 
   # 1W*s = 1J and 1J = (1/3600000)kWh
   watt_per_second_to_kWh: 0.000000277777777777778
@@ -20,7 +18,6 @@ properties:
   mode: dark
   
   ### Internal Properties
-  time_window: "[${period}:${window}]"
   dataset_url: ${prom_url}/api/v1/query
 
 global:
@@ -47,21 +44,21 @@ datasets:
     query:
         query: >-
             (sum(
-                (increase(kepler_container_package_joules_total[1h])
+                (increase(kepler_container_package_joules_total{container_namespace=~"${namespace}"}[1h])
                  *${watt_per_second_to_kWh}
                 ) *
-               (count_over_time(kepler_container_package_joules_total[24h])/
-                  count_over_time(kepler_container_package_joules_total[1h])
+               (count_over_time(kepler_container_package_joules_total{container_namespace=~"${namespace}"}[24h])/
+                  count_over_time(kepler_container_package_joules_total{container_namespace=~"${namespace}"}[1h])
                )
               ) * ${coal}
             )
             +
             (sum(
-                (increase(kepler_container_dram_joules_total[1h])
+                (increase(kepler_container_dram_joules_total{container_namespace=~"${namespace}"}[1h])
                  *${watt_per_second_to_kWh}
                 ) *
-               (count_over_time(kepler_container_dram_joules_total[24h])/
-                  count_over_time(kepler_container_dram_joules_total[1h])
+               (count_over_time(kepler_container_dram_joules_total{container_namespace=~"${namespace}"}[24h])/
+                  count_over_time(kepler_container_dram_joules_total{container_namespace=~"${namespace}"}[1h])
                )
               ) * ${coal}
             )
@@ -69,21 +66,21 @@ datasets:
     query:
         query: >-
             (sum(
-                (increase(kepler_container_package_joules_total[1h])
+                (increase(kepler_container_package_joules_total{container_namespace=~"${namespace}"}[1h])
                  *${watt_per_second_to_kWh}
                 ) *
-               (count_over_time(kepler_container_package_joules_total[24h])/
-                  count_over_time(kepler_container_package_joules_total[1h])
+               (count_over_time(kepler_container_package_joules_total{container_namespace=~"${namespace}"}[24h])/
+                  count_over_time(kepler_container_package_joules_total{container_namespace=~"${namespace}"}[1h])
                )
               ) * ${petroleum}
             )
             +
             (sum(
-                (increase(kepler_container_dram_joules_total[1h])
+                (increase(kepler_container_dram_joules_total{container_namespace=~"${namespace}"}[1h])
                  *${watt_per_second_to_kWh}
                 ) *
-               (count_over_time(kepler_container_dram_joules_total[24h])/
-                  count_over_time(kepler_container_dram_joules_total[1h])
+               (count_over_time(kepler_container_dram_joules_total{container_namespace=~"${namespace}"}[24h])/
+                  count_over_time(kepler_container_dram_joules_total{container_namespace=~"${namespace}"}[1h])
                )
               ) * ${petroleum}
             )
@@ -91,21 +88,21 @@ datasets:
     query:
       query: >-
         (sum(
-            (increase(kepler_container_package_joules_total[1h])
+            (increase(kepler_container_package_joules_total{container_namespace=~"${namespace}"}[1h])
              *${watt_per_second_to_kWh}
             ) *
-           (count_over_time(kepler_container_package_joules_total[24h])/
-              count_over_time(kepler_container_package_joules_total[1h])
+           (count_over_time(kepler_container_package_joules_total{container_namespace=~"${namespace}"}[24h])/
+              count_over_time(kepler_container_package_joules_total{container_namespace=~"${namespace}"}[1h])
            )
           ) * ${natural_gas}
         )
         +
         (sum(
-            (increase(kepler_container_dram_joules_total[1h])
+            (increase(kepler_container_dram_joules_total{container_namespace=~"${namespace}"}[1h])
              *${watt_per_second_to_kWh}
             ) *
-           (count_over_time(kepler_container_dram_joules_total[24h])/
-              count_over_time(kepler_container_dram_joules_total[1h])
+           (count_over_time(kepler_container_dram_joules_total{container_namespace=~"${namespace}"}[24h])/
+              count_over_time(kepler_container_dram_joules_total{container_namespace=~"${namespace}"}[1h])
            )
           ) * ${natural_gas}
         )
@@ -114,21 +111,21 @@ datasets:
     query:
       query: >-
         sum by (container_namespace) (
-              (increase(kepler_container_package_joules_total[1h])
+              (increase(kepler_container_package_joules_total{container_namespace=~"${namespace}"}[1h])
                 *${watt_per_second_to_kWh}
               ) *
-              (count_over_time(kepler_container_package_joules_total[24h])/
-                count_over_time(kepler_container_package_joules_total[1h])
+              (count_over_time(kepler_container_package_joules_total{container_namespace=~"${namespace}"}[24h])/
+                count_over_time(kepler_container_package_joules_total{container_namespace=~"${namespace}"}[1h])
               )
               
             )
             +
             sum by (container_namespace) (
-              (increase(kepler_container_dram_joules_total[1h])
+              (increase(kepler_container_dram_joules_total{container_namespace=~"${namespace}"}[1h])
                 *${watt_per_second_to_kWh}
               ) *
-              (count_over_time(kepler_container_dram_joules_total[24h])/
-                count_over_time(kepler_container_dram_joules_total[1h])
+              (count_over_time(kepler_container_dram_joules_total{container_namespace=~"${namespace}"}[24h])/
+                count_over_time(kepler_container_dram_joules_total{container_namespace=~"${namespace}"}[1h])
               )
             )
   # Total Power Consumption By Day
@@ -136,22 +133,22 @@ datasets:
     query:
       query: >-
         sum(
-          (increase(kepler_container_package_joules_total[1h])
+          (increase(kepler_container_package_joules_total{container_namespace=~"${namespace}"}[1h])
             *${watt_per_second_to_kWh}
           ) *
-          (count_over_time(kepler_container_package_joules_total[24h])/
-            count_over_time(kepler_container_package_joules_total[1h])
+          (count_over_time(kepler_container_package_joules_total{container_namespace=~"${namespace}"}[24h])/
+            count_over_time(kepler_container_package_joules_total{container_namespace=~"${namespace}"}[1h])
           )
         )${time_window}
   - uuid: DRAM by Day
     query:
       query: >-
         sum(
-          (increase(kepler_container_dram_joules_total[1h])
+          (increase(kepler_container_dram_joules_total{container_namespace=~"${namespace}"}[1h])
             *${watt_per_second_to_kWh}
           ) *
-          (count_over_time(kepler_container_dram_joules_total[24h])/
-            count_over_time(kepler_container_dram_joules_total[1h])
+          (count_over_time(kepler_container_dram_joules_total{container_namespace=~"${namespace}"}[24h])/
+            count_over_time(kepler_container_dram_joules_total{container_namespace=~"${namespace}"}[1h])
           )
         )${time_window}
   - uuid: Other by Day
@@ -159,24 +156,24 @@ datasets:
       query: >-
         sum(
           (increase(
-            kepler_container_other_host_components_joules_total[1h])
+            kepler_container_other_host_components_joules_total{container_namespace=~"${namespace}"}[1h])
             *${watt_per_second_to_kWh}
           ) *
           (count_over_time(
-            kepler_container_other_host_components_joules_total[24h])/
+            kepler_container_other_host_components_joules_total{container_namespace=~"${namespace}"}[24h])/
             count_over_time(
-              kepler_container_other_host_components_joules_total[1h])
+              kepler_container_other_host_components_joules_total{container_namespace=~"${namespace}"}[1h])
           )
         )${time_window}
   - uuid: GPU by Day
     query:
       query: >-
         sum(
-          (increase(kepler_container_gpu_joules_total[1h])
+          (increase(kepler_container_gpu_joules_total{container_namespace=~"${namespace}"}[1h])
             *${watt_per_second_to_kWh}
           ) *
-          (count_over_time(kepler_container_gpu_joules_total[24h])/
-            count_over_time(kepler_container_gpu_joules_total[1h])
+          (count_over_time(kepler_container_gpu_joules_total{container_namespace=~"${namespace}"}[24h])/
+            count_over_time(kepler_container_gpu_joules_total{container_namespace=~"${namespace}"}[1h])
           )
         )${time_window}
   - uuid: powerConsumptionByDay
@@ -188,16 +185,16 @@ datasets:
   # Total Power Consumption (W)
   - uuid: PKG (W)
     query:
-      query: sum(irate(kepler_container_package_joules_total[1m]))${time_window}
+      query: sum(irate(kepler_container_package_joules_total{container_namespace=~"${namespace}"}[1m]))${time_window}
   - uuid: DRAM (W)
     query:
-      query: sum(irate(kepler_container_dram_joules_total[1m]))${time_window}
+      query: sum(irate(kepler_container_dram_joules_total{container_namespace=~"${namespace}"}[1m]))${time_window}
   - uuid: OTHER (W)
     query:
-      query: sum(irate(kepler_container_other_host_components_joules_total[1m]))${time_window}
+      query: sum(irate(kepler_container_other_host_components_joules_total{container_namespace=~"${namespace}"}[1m]))${time_window}
   - uuid: GPU (W)
     query:
-      query: sum(irate(kepler_container_gpu_joules_total[1m]))${time_window}
+      query: sum(irate(kepler_container_gpu_joules_total{container_namespace=~"${namespace}"}[1m]))${time_window}
   - uuid: totalPowerConsumptionW
     join:
       - PKG (W)
@@ -208,19 +205,19 @@ datasets:
   - uuid: packagesPowerConsumption
     query:
       query: >-
-        sum by (pod_name) (irate(kepler_container_package_joules_total[1m]))${time_window}
+        sum by (pod_name) (irate(kepler_container_package_joules_total{container_namespace=~"${namespace}"}[1m]))${time_window}
   - uuid: dramPowerConsumption
     query:
       query: >-
-        sum by (pod_name) (irate(kepler_container_dram_joules_total[1m]))${time_window}
+        sum by (pod_name) (irate(kepler_container_dram_joules_total{container_namespace=~"${namespace}"}[1m]))${time_window}
   - uuid: otherPowerConsumption
     query:
       query: >-
-        sum by (pod_name) (irate(kepler_container_other_host_joules_total[1m]))${time_window}
+        sum by (pod_name) (irate(kepler_container_other_host_joules_total{container_namespace=~"${namespace}"}[1m]))${time_window}
   - uuid: gpuPowerConsumption
     query:
       query: >-
-        sum by (pod_name) (irate(kepler_container_gpu_joules_total[1m]))${time_window}
+        sum by (pod_name) (irate(kepler_container_gpu_joules_total{container_namespace=~"${namespace}"}[1m]))${time_window}
   - uuid: byPowerConsumption
     expression: >-
         $.[
@@ -248,7 +245,6 @@ datasets:
   - uuid: namespaces
     query:
         query: sum by (container_namespace) (kepler_container_package_joules_total)
-
 pages:
   - name: index
     components:
@@ -258,16 +254,71 @@ pages:
               <span style="margin-left: 20px">Kepler Metrics</span>
           </p>
           <hr />
+      - panel: Control
+      - panel: Carbon Emissions
+      - panel: Pod/Service Power Consumption
+      - panel: Power Consumption
+      - panel: Total Power Consumption
+  - name: Control
+    components:
+
       - settings:
           type: METRIC
           html:
             html: >-
                 <div id="${this}" class="form" style= "margin: 10px">
-                    <label>Namespace</label><select id="${this}Select" class="form-control"></select>
+                    <form>
+                        <div class="form-group row">
+                            <div class="col-sm-2">
+                                <label for="${this}SelectNamespace" >Namespace</label>
+                                <select name="${this}SelectNamespace" id="${this}SelectNamespace" class="form-control"></select>
+                            </div>
+                            
+                            
+                            <div class="col-sm-2">
+                                <label for="${this}PeriodInput"><span style="margin-right: 5px" class="fa fa-clock-o"></span>Period</label>
+                                <select name="${this}PeriodInput" id="${this}PeriodInput" class="form-control" value="${petroleum}">
+                                    <option value="[5m:15s]">Last 5 minutes</option>
+                                    <option value="[15m:30s]">Last 15 minutes</option>
+                                    <option value="[1h:1m]">Last 1 hour</option>
+                                    <option value="[6h:10m]">Last 6 hours</option>
+                                    <option value="[12h:30m]">Last 12 hours</option>
+                                    <option value="[24h:1h]">Last 24 hours</option>
+                                    <option value="[48h:2h]">Last 2 days</option>
+                                </select>
+                            </div>
+                        
+                        
+                        
+                            <div class="col-sm-2">
+                                <label for="${this}CoalInput" >Coal Coeff</label>
+                                <input name="${this}CoalInput" id="${this}CoalInput" class="form-control" value="${coal}"></input>
+                            </div>
+                            
+                            
+                            <div class="col-sm-2">
+                                <label for="${this}NaturalGasInput" >Natural Gas Coeff</label>
+                                <input name="${this}NaturalGasInput" id="${this}NaturalGasInput" class="form-control" value="${natural_gas}"></input>
+                            </div>
+                            
+                            <div class="col-sm-2">
+                                <label for="${this}PetroleumInput" >Petroleum Coeff</label>
+                                <input name="${this}PetroleumInput" id="${this}PetroleumInput" class="form-control" value="${petroleum}"></input>                              
+                            </div>
+                        
+                        
+                            <div class="col-sm-2" style="margin-top: 25px">
+                            
+                            <button class="btn btn-primary" id="${this}Update">
+                                Update
+                            </button>
+                            </div>
+                        </div>
+                    <form>
                 </div>
             javascript: >-
                 namespaces = "${value}".split(", ");
-                namespacesSelect = document.getElementById(${this}.id + "Select" );
+                namespacesSelect = document.getElementById(${this}.id + "SelectNamespace" );
                 
                 options = [];
                 option = document.createElement("option");
@@ -283,9 +334,24 @@ pages:
                     option.selected = option.value === "${namespace}" ? "selected" : "";
                     options.push(option);
                 });
-                
                 options.forEach(op => namespacesSelect.appendChild(op));
                 
+                var periodSelect = document.getElementById(${this}.id + "PeriodInput");
+                var periodOptions = periodSelect.options;
+                for (var i =0; i < periodOptions.length; i++) {
+                    var op = periodOptions[i];
+                    op.selected = op.value === "${time_window}" ? "selected" : "";
+                }
+               
+                document.getElementById(${this}.id + "Update").onclick = e => {
+                  namespace = namespacesSelect.value;
+                  time_window = periodSelect.value;
+                  coal = document.getElementById(${this}.id + "CoalInput").value;
+                  petroleum = document.getElementById(${this}.id + "PetroleumInput").value;
+                  natural_gas = document.getElementById(${this}.id + "NaturalGasInput").value;
+                  console.log(window.location.href);
+                  
+                };
           lookup:
             uuid: namespaces
             group:
@@ -294,10 +360,6 @@ pages:
                   functions:
                     - source: container_namespace
                       function: JOIN_COMMA
-      - panel: Carbon Emissions
-      - panel: Pod/Service Power Consumption
-      - panel: Power Consumption
-      - panel: Total Power Consumption
   - name: Power Consumption
     rows:
       - properties:
@@ -320,7 +382,6 @@ pages:
                                 }
                             }   
                         }
-                                                
                     }
                   general:
                     title: Total Power Consumption (W)
@@ -505,6 +566,9 @@ pages:
                         y: false
                     legend:
                         show: true
+                  columns:
+                    - id: timestamp
+                      expression: new Date(parseInt(value))
                   lookup:
                     uuid: byPowerConsumption
                     group:
