--- a/Prometheus/kepler.dash.yaml
+++ b/Prometheus/kepler.dash.yaml
@@ -344,13 +344,18 @@ pages:
                 }
                
                 document.getElementById(${this}.id + "Update").onclick = e => {
-                  namespace = namespacesSelect.value;
-                  time_window = periodSelect.value;
-                  coal = document.getElementById(${this}.id + "CoalInput").value;
-                  petroleum = document.getElementById(${this}.id + "PetroleumInput").value;
-                  natural_gas = document.getElementById(${this}.id + "NaturalGasInput").value;
-                  console.log(window.location.href);
+
+                  var destination = new URL(window.location.href);
+                  var params = destination.searchParams;
                   
+                  
+                  params.set("namespace", namespacesSelect.value);
+                  params.set("time_window", periodSelect.value);
+                  params.set("coal", document.getElementById(${this}.id + "CoalInput").value);
+                  params.set("natural_gas", document.getElementById(${this}.id + "NaturalGasInput").value);
+                  params.set("petroleum", document.getElementById(${this}.id + "PetroleumInput").value);
+                  
+                  window.location.href = destination.toString();
                 };
           lookup:
             uuid: namespaces
